# pydantic-settings-sops

./: .copier-answers.yml  .pre-commit-config.yaml  .sops.yaml  README.md  pixi.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml
pydantic_settings_sops/: __init__.py  json.py  mixin.py  yaml.py
tests/: test_core.py  test_optional.py  test_sops.py
tests/resources/: key.txt  secrets.json  secrets.yaml  secrets2.json  secrets2.yaml
